...
                    <rect key="frame" x="8" y="617" width="359" height="40"/>
                    <color key="backgroundColor" red="0.098039215690000001" green="0.63921568630000003" blue="0.93725490199999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="40" id="4nf-uS-hKf"/>
                    </constraints>
                    <fontDescription key="fontDescription" name="SourceSansPro-Semibold" family="Source Sans Pro" pointSize="18"/>
                    <state key="normal" title="OK"/>
                    <connections>
                        <action selector="submitButtonDidTapped:" destination="-1" eventType="touchUpInside" id="9q8-q7-8sQ"/>
                    </connections>
                </button>
            </subviews>
            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
